--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "clsx": "^1.1.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-draggable": "^4.4.3",
+    "react-rnd": "^10.3.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
