--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-draggable": "^4.4.3",
     "react-rnd": "^10.3.3",
     "react-scripts": "4.0.3",
+    "react-xarrows": "^1.7.0",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
