--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^17.0.2",
     "react-rnd": "^10.3.3",
     "react-scripts": "4.0.3",
+    "react-tabs": "^3.2.2",
     "react-xarrows": "^1.7.0",
     "web-vitals": "^1.1.2"
   },
